--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/styles": "^4.5.0",
+    "colyseus.js": "^0.9.13",
+    "i18next": "^17.0.18",
     "react": "^16.10.2",
+    "react-autobind": "^1.0.6",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
