--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.5.0",
+    "axios": "^0.19.0",
     "colyseus.js": "^0.9.13",
+    "events": "^3.0.0",
     "i18next": "^17.0.18",
     "lightweight-charts": "^1.1.0",
     "react": "^16.10.2",
     "react-autobind": "^1.0.6",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.1",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
