--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lightweight-charts": "^1.1.0",
     "react": "^16.10.2",
     "react-autobind": "^1.0.6",
+    "react-custom-scroll": "^4.1.5",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
