--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
+    "@material-ui/lab": "^4.0.0-alpha.29",
     "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
     "colyseus.js": "^0.9.13",
