--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-custom-scroll": "^4.1.5",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.10.2",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
