--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/lab": "^4.0.0-alpha.29",
     "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
+    "bignumber.js": "^9.0.0",
     "colyseus.js": "^0.9.13",
     "events": "^3.0.0",
     "i18next": "^17.0.18",
