--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "colyseus.js": "^0.9.13",
     "events": "^3.0.0",
     "i18next": "^17.0.18",
+    "qrcode.react": "^1.0.0",
     "react": "^16.10.2",
     "react-autobind": "^1.0.6",
+    "react-clipboard.js": "^2.0.16",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
