--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qrcode.react": "^1.0.0",
     "react": "^16.10.2",
     "react-autobind": "^1.0.6",
+    "react-countdown-clock": "^2.7.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
