--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "react-virtualized": "^9.21.2",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0"
   },
