--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-countdown-clock": "^2.7.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.10.2",
+    "react-phone-input-2": "^2.11.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "react-virtualized": "^9.21.2",
